<resources>
    <string name="app_name">Android_harjoitukset</string>
    <string name="hello">Hello!</string>
    <string name="hellobtn">HELLO</string>
    <string name="gamebtn">GAME</string>
    <string name="gameText">Game demo</string>
    <string name="playBtnDescrpt">Image button, click to find star</string>
    <string name="restartBtn">Restart game</string>
    <string name="lastScore">Last score:</string>
    <string name="title_activity_main2" translatable="false">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="locationTitle">Location</string>
    <string name="mapBtn">Show on map</string>
    <string name="apmTextOn">Airplane mode ON</string>
    <string name="apmTextOff">Airplane mode OFF</string>
    <string name="timerStartText">START</string>
    <string name="timerPauseText">PAUSE</string>
    <string name="timerStopText">STOP</string>
    <string name="timerEndText">TIME\'S UP</string>
    <string name="searchbtn">SEARCH</string>
    <string name="regDateText">Registration date: </string>
    <string name="compFormText">Company form: </string>
    <string name="comIdText">Business id: </string>
    <string name="search_title">YTJ-interface search</string>
    <string name="label">Input value and select currency</string>
    <string name="currencyText">Euro tourist currency converter</string>
    <string name="SEK">SEK</string>
    <string name="NOK">NOK</string>
    <string name="DKK">DKK</string>
    <string name="curError">Converting not possible</string>
    <string name="exambtn">EXAM</string>

</resources>