<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notifications.NotificationsFragment">

    <TextClock
        android:id="@+id/textclock"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:autoSizeTextType="uniform"
        android:format24Hour="dd.MM.yyyy k:mm"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/numberpicker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <NumberPicker
        android:id="@+id/numberpicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/endText"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:autoSizeTextType="uniform"
        
        android:text="@string/timerEndText"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/toggleButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberpicker" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/numberpicker">

        <Button
            android:id="@+id/timerStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timerStartText" />

        <Button
            android:id="@+id/timerPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timerPauseText" />

        <Button
            android:id="@+id/timerStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timerStopText" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

</androidx.constraintlayout.widget.ConstraintLayout>