<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExamActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/curToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:titleTextColor="@android:color/white" />

    <TextView
        android:id="@+id/currencyTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:layout_marginHorizontal="10dp"
        android:autoSizeTextType="uniform"
        android:text="@string/currencyText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/curToolbar"
        app:layout_constraintVertical_bias="0.236" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/currencyInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        app:errorEnabled="true"
        android:hint="@string/label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currencyTitle"
        app:layout_constraintVertical_bias="0.182">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/currencyInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/currencyBtnGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.182"
        app:layout_constraintTop_toBottomOf="@+id/currencyInputLayout">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sekBtn"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SEK" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nokBtn"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NOK" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dkkBtn"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DKK" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
        android:id="@+id/currencyResult"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="50dp"
        android:layout_marginHorizontal="10dp"
        android:autoSizeTextType="uniform"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currencyBtnGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>