<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".GameActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:titleTextColor="@android:color/white" />

    <TextView
        android:id="@+id/gameText"
        android:layout_width="341dp"
        android:layout_height="82dp"
        android:autoSizeTextType="uniform"
        android:text="@string/gameText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/playBtn1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/playBtnDescrpt"
        android:scaleType="fitCenter"
        android:src="@drawable/star"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.781"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playBtn4"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/playBtn2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="96dp"
        android:contentDescription="@string/playBtnDescrpt"
        android:scaleType="fitCenter"
        android:src="@drawable/star"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/playBtn4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameText"
        app:layout_constraintVertical_bias="0.002" />

    <ImageButton
        android:id="@+id/playBtn3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/playBtnDescrpt"
        android:scaleType="fitCenter"
        android:src="@drawable/star"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/playBtn1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playBtn2"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/playBtn4"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="97dp"
        android:contentDescription="@string/playBtnDescrpt"
        android:scaleType="fitCenter"
        android:src="@drawable/star"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.781"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameText"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/lastScore"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:autoSizeTextType="uniform"
        android:text="@string/lastScore"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.255"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.845" />

    <TextView
        android:id="@+id/scoreValue"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text=""
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/lastScore"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.845" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/restartBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/restartBtn"
        android:scaleType="fitCenter"
        android:src="@drawable/reload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />
</androidx.constraintlayout.widget.ConstraintLayout>
