<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/cardTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="horizontal"
                android:background="@color/lightpurple">

                <TextView
                    android:id="@+id/compName"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="vertical">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/compIdText"
                        android:layout_width="wrap_content"
                        android:minWidth="50dp"
                        android:layout_marginEnd="5dp"
                        android:layout_height="wrap_content"
                        android:text="@string/comIdText" />

                    <TextView
                        android:id="@+id/compIdVal"
                        android:layout_width="wrap_content"
                        android:minWidth="50dp"
                        android:layout_height="wrap_content"
                        android:text="" />
                </LinearLayout>

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/compFormText"
                        android:layout_width="wrap_content"
                        android:minWidth="50dp"
                        android:layout_marginEnd="5dp"

                        android:layout_height="wrap_content"
                        android:text="@string/compFormText" />

                    <TextView
                        android:id="@+id/compFormVal"
                        android:layout_width="wrap_content"
                        android:minWidth="50dp"
                        android:layout_height="wrap_content"
                        android:text="" />
                </LinearLayout>

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/regDateText"
                        android:layout_width="wrap_content"
                        android:minWidth="50dp"
                        android:layout_marginEnd="5dp"

                        android:layout_height="wrap_content"
                        android:text="@string/regDateText" />

                    <TextView
                        android:id="@+id/regDateVal"
                        android:layout_width="wrap_content"
                        android:minWidth="50dp"
                        android:layout_height="wrap_content"
                        android:text="" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>